// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner renders the UI snapshot correctly 1`] = `
<aside
  className="css-1xdhyk6"
  data-testid="ds-banner"
  data-variant="informative"
  id="test-id"
>
  <svg
    aria-hidden={true}
    className="chakra-icon css-1976tye"
    data-file-name="SvgErrorOutline"
    data-testid="test-id-banner-icon"
    focusable={false}
    role="img"
    title="Banner informative icon"
  />
  <div
    className="css-1bxarir"
  >
    <h2
      className="chakra-heading css-u0977i"
      data-testid="ds-heading"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 2`] = `
<aside
  className="css-1xdhyk6"
  data-testid="ds-banner"
  data-variant="negative"
  id="bannerID3"
>
  <svg
    aria-hidden={true}
    className="chakra-icon css-1976tye"
    data-file-name="SvgErrorOutline"
    data-testid="bannerID3-banner-icon"
    focusable={false}
    role="img"
    title="Banner negative icon"
  />
  <div
    className="css-1bxarir"
  >
    <h2
      className="chakra-heading css-15kduf4"
      data-testid="ds-heading"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 3`] = `
<aside
  className="css-1xdhyk6"
  data-testid="ds-banner"
  data-variant="neutral"
  id="bannerID3"
>
  <svg
    aria-hidden={true}
    className="chakra-icon css-1976tye"
    data-file-name="SvgErrorOutline"
    data-testid="bannerID3-banner-icon"
    focusable={false}
    role="img"
    title="Banner neutral icon"
  />
  <div
    className="css-1bxarir"
  >
    <h2
      className="chakra-heading css-u0977i"
      data-testid="ds-heading"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 4`] = `
<aside
  className="css-1xdhyk6"
  data-testid="ds-banner"
  data-variant="positive"
  id="bannerID3"
>
  <svg
    aria-hidden={true}
    className="chakra-icon css-1976tye"
    data-file-name="SvgActionCheckCircle"
    data-testid="bannerID3-banner-icon"
    focusable={false}
    role="img"
    title="Banner positive icon"
  />
  <div
    className="css-1bxarir"
  >
    <h2
      className="chakra-heading css-u0977i"
      data-testid="ds-heading"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 5`] = `
<aside
  className="css-1xdhyk6"
  data-testid="ds-banner"
  data-variant="recommendation"
  id="bannerID3"
>
  <svg
    aria-hidden={true}
    className="chakra-icon css-1976tye"
    data-file-name="SvgActionLightbulb"
    data-testid="bannerID3-banner-icon"
    focusable={false}
    role="img"
    title="Banner recommendation icon"
  />
  <div
    className="css-1bxarir"
  >
    <h2
      className="chakra-heading css-u0977i"
      data-testid="ds-heading"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 6`] = `
<aside
  className="css-1xdhyk6"
  data-testid="ds-banner"
  data-variant="warning"
  id="bannerID3"
>
  <svg
    aria-hidden={true}
    className="chakra-icon css-1976tye"
    data-file-name="SvgAlertNotificationImportant"
    data-testid="bannerID3-banner-icon"
    focusable={false}
    role="img"
    title="Banner warning icon"
  />
  <div
    className="css-1bxarir"
  >
    <h2
      className="chakra-heading css-u0977i"
      data-testid="ds-heading"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 7`] = `
<aside
  className="css-1xdhyk6"
  data-testid="ds-banner"
  data-variant="neutral"
  id="bannerID4"
>
  <svg
    aria-hidden={true}
    className="chakra-icon css-1vgifmd"
    data-file-name="SvgErrorOutline"
    data-testid="bannerID4-banner-icon"
    focusable={false}
    role="img"
    title="Banner neutral icon"
  />
  <div
    className="css-1bxarir"
  >
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 8`] = `
<aside
  className="css-1xdhyk6"
  data-testid="ds-banner"
  data-variant="neutral"
  id="bannerID7"
>
  <svg
    aria-hidden={true}
    className="chakra-icon css-1vgifmd"
    data-file-name="SvgErrorOutline"
    data-testid="bannerID7-banner-icon"
    focusable={false}
    role="img"
    title="Banner neutral icon"
  />
  <div
    className="css-1bxarir"
  >
    Banner content.
  </div>
  <button
    aria-label="Close the banner"
    className="chakra-button css-1xdhyk6"
    data-testid="ds-button"
    id="bannerID7-dismissible-button"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="chakra-icon css-1vgifmd"
      data-file-name="SvgClose"
      data-testid="bannerID7-dismissible-icon"
      focusable={false}
      role="img"
      title="Banner close icon"
    />
  </button>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 9`] = `
<aside
  className="css-16h1ce8"
  data-testid="ds-banner"
  data-variant="neutral"
  id="chakra"
>
  <svg
    aria-hidden={true}
    className="chakra-icon css-1976tye"
    data-file-name="SvgErrorOutline"
    data-testid="chakra-banner-icon"
    focusable={false}
    role="img"
    title="Banner neutral icon"
  />
  <div
    className="css-1bxarir"
  >
    <h2
      className="chakra-heading css-u0977i"
      data-testid="ds-heading"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;

exports[`Banner renders the UI snapshot correctly 10`] = `
<aside
  className="css-1xdhyk6"
  data-testid="props"
  data-variant="neutral"
  id="props"
>
  <svg
    aria-hidden={true}
    className="chakra-icon css-1976tye"
    data-file-name="SvgErrorOutline"
    data-testid="props-banner-icon"
    focusable={false}
    role="img"
    title="Banner neutral icon"
  />
  <div
    className="css-1bxarir"
  >
    <h2
      className="chakra-heading css-u0977i"
      data-testid="ds-heading"
    >
      Banner Heading
    </h2>
    Banner content.
  </div>
</aside>
`;
